# -2

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  data.yaml
config/: config.yaml
include/core/: detector.hpp  kalman_filter.hpp
include/hardware/: camera.hpp
include/utils/: logger.hpp
runs/detect/train/: args.yaml
runs/detect/train-2/: args.yaml  results.csv
scripts/: capture_data.py  export_onnx.py  install_deps.sh  split_dataset.py
src/: main.cpp
src/core/: detector.cpp  kalman_filter.cpp  pid_controller.cpp  tracker.cpp
src/hardware/: camera.cpp  serial_comm.cpp
src/utils/: logger.cpp
vision_tracker/: CMakeLists.txt
vision_tracker/config/: config.yaml
vision_tracker/include/core/: detector.hpp  pid_controller.hpp  tracker.hpp
vision_tracker/include/hardware/: camera.hpp  serial_comm.hpp
vision_tracker/include/utils/: config_manager.hpp
vision_tracker/scripts/: train_yolo.py
vision_tracker/src/: main.cpp
vision_tracker/src/core/: detector.cpp
vision_tracker/src/hardware/: camera.cpp  serial_comm.cpp
vision_tracker/src/utils/: config_manager.cpp
